--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
+atomicwrites==1.3.0
+attrs==19.1.0
 certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+future==0.17.1
+idna==2.8
+importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+more-itertools==7.1.0
+oauthlib==2.1.0
+packaging==19.0
+pluggy==0.12.0
+py==1.8.0
+pybitbucket==0.12.0
+pyparsing==2.4.0
+pytest==5.0.1
+requests==2.22.0
+requests-mock==1.6.0
+requests-oauthlib==0.8.0
+simplejson==3.16.0
+six==1.12.0
+uritemplate==0.6
+urllib3==1.25.3
+voluptuous==0.11.5
+wcwidth==0.1.7
 Werkzeug==0.15.2
+yapf==0.28.0
+zipp==0.5.2
